added jupyter notebook regression plot

--- a/Equity-Hedge-Notebook-Interns.ipynb
+++ b/Equity-Hedge-Notebook-Interns.ipynb
@@ -33,6 +33,7 @@
     "#from EquityHedging.reporting import formatter as fmt, plots\n",
     "from EquityHedging.reporting import formatter as fmt\n",
     "from ipywidgets import interact, interact_manual\n",
+    "from EquityHedging.reporting import plots as plt2\n",
     "\n",
     "new_strat = False\n",
     "notional_weights = []\n",
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,241 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SPTR</th>\n",
-       "      <th>Down Var</th>\n",
-       "      <th>VOLA 3</th>\n",
-       "      <th>Dynamic Put Spread</th>\n",
-       "      <th>VRR 2</th>\n",
-       "      <th>VRR Trend</th>\n",
-       "      <th>GW Dispersion</th>\n",
-       "      <th>Corr Hedge</th>\n",
-       "      <th>Def Var</th>\n",
-       "      <th>Commodity Basket</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2008-01-02</th>\n",
-       "      <td>-0.014234</td>\n",
-       "      <td>0.001222</td>\n",
-       "      <td>0.000405</td>\n",
-       "      <td>0.007035</td>\n",
-       "      <td>0.038563</td>\n",
-       "      <td>0.092654</td>\n",
-       "      <td>0.004445</td>\n",
-       "      <td>-0.000645</td>\n",
-       "      <td>0.000060</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2008-01-03</th>\n",
-       "      <td>0.000004</td>\n",
-       "      <td>-0.007951</td>\n",
-       "      <td>-0.000404</td>\n",
-       "      <td>0.000902</td>\n",
-       "      <td>-0.000481</td>\n",
-       "      <td>-0.005330</td>\n",
-       "      <td>0.000557</td>\n",
-       "      <td>0.000706</td>\n",
-       "      <td>0.002847</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2008-01-04</th>\n",
-       "      <td>-0.024554</td>\n",
-       "      <td>-0.002920</td>\n",
-       "      <td>0.000757</td>\n",
-       "      <td>0.010221</td>\n",
-       "      <td>0.000104</td>\n",
-       "      <td>0.014632</td>\n",
-       "      <td>0.004150</td>\n",
-       "      <td>0.001413</td>\n",
-       "      <td>0.001678</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2008-01-07</th>\n",
-       "      <td>0.003233</td>\n",
-       "      <td>-0.011995</td>\n",
-       "      <td>-0.000090</td>\n",
-       "      <td>-0.000405</td>\n",
-       "      <td>-0.000506</td>\n",
-       "      <td>-0.003820</td>\n",
-       "      <td>0.001705</td>\n",
-       "      <td>0.003480</td>\n",
-       "      <td>0.002363</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2008-01-08</th>\n",
-       "      <td>-0.018022</td>\n",
-       "      <td>0.007908</td>\n",
-       "      <td>-0.001076</td>\n",
-       "      <td>0.006206</td>\n",
-       "      <td>-0.033850</td>\n",
-       "      <td>-0.031475</td>\n",
-       "      <td>0.005055</td>\n",
-       "      <td>0.001406</td>\n",
-       "      <td>-0.001676</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-05-24</th>\n",
-       "      <td>-0.007300</td>\n",
-       "      <td>-0.001545</td>\n",
-       "      <td>0.000288</td>\n",
-       "      <td>0.001141</td>\n",
-       "      <td>-0.000438</td>\n",
-       "      <td>-0.008191</td>\n",
-       "      <td>-0.000405</td>\n",
-       "      <td>-0.001660</td>\n",
-       "      <td>0.000432</td>\n",
-       "      <td>0.000302</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-05-25</th>\n",
-       "      <td>0.008790</td>\n",
-       "      <td>0.001074</td>\n",
-       "      <td>-0.000420</td>\n",
-       "      <td>-0.001516</td>\n",
-       "      <td>0.000819</td>\n",
-       "      <td>0.007407</td>\n",
-       "      <td>0.009797</td>\n",
-       "      <td>0.001363</td>\n",
-       "      <td>-0.000456</td>\n",
-       "      <td>-0.000758</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-05-26</th>\n",
-       "      <td>0.013120</td>\n",
-       "      <td>0.003091</td>\n",
-       "      <td>-0.000466</td>\n",
-       "      <td>-0.002386</td>\n",
-       "      <td>0.001520</td>\n",
-       "      <td>0.002458</td>\n",
-       "      <td>0.001596</td>\n",
-       "      <td>-0.001314</td>\n",
-       "      <td>-0.000872</td>\n",
-       "      <td>0.001208</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-05-30</th>\n",
-       "      <td>0.000083</td>\n",
-       "      <td>-0.001908</td>\n",
-       "      <td>-0.000081</td>\n",
-       "      <td>0.000400</td>\n",
-       "      <td>0.000732</td>\n",
-       "      <td>-0.015411</td>\n",
-       "      <td>0.001291</td>\n",
-       "      <td>-0.002394</td>\n",
-       "      <td>0.003186</td>\n",
-       "      <td>0.000390</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-05-31</th>\n",
-       "      <td>-0.005901</td>\n",
-       "      <td>-0.003103</td>\n",
-       "      <td>-0.000026</td>\n",
-       "      <td>0.001224</td>\n",
-       "      <td>-0.004250</td>\n",
-       "      <td>-0.012626</td>\n",
-       "      <td>0.002401</td>\n",
-       "      <td>0.001599</td>\n",
-       "      <td>0.000712</td>\n",
-       "      <td>-0.001304</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3876 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                SPTR  Down Var    VOLA 3  Dynamic Put Spread     VRR 2  \\\n",
-       "Date                                                                     \n",
-       "2008-01-02 -0.014234  0.001222  0.000405            0.007035  0.038563   \n",
-       "2008-01-03  0.000004 -0.007951 -0.000404            0.000902 -0.000481   \n",
-       "2008-01-04 -0.024554 -0.002920  0.000757            0.010221  0.000104   \n",
-       "2008-01-07  0.003233 -0.011995 -0.000090           -0.000405 -0.000506   \n",
-       "2008-01-08 -0.018022  0.007908 -0.001076            0.006206 -0.033850   \n",
-       "...              ...       ...       ...                 ...       ...   \n",
-       "2023-05-24 -0.007300 -0.001545  0.000288            0.001141 -0.000438   \n",
-       "2023-05-25  0.008790  0.001074 -0.000420           -0.001516  0.000819   \n",
-       "2023-05-26  0.013120  0.003091 -0.000466           -0.002386  0.001520   \n",
-       "2023-05-30  0.000083 -0.001908 -0.000081            0.000400  0.000732   \n",
-       "2023-05-31 -0.005901 -0.003103 -0.000026            0.001224 -0.004250   \n",
-       "\n",
-       "            VRR Trend  GW Dispersion  Corr Hedge   Def Var  Commodity Basket  \n",
-       "Date                                                                          \n",
-       "2008-01-02   0.092654       0.004445   -0.000645  0.000060          0.000000  \n",
-       "2008-01-03  -0.005330       0.000557    0.000706  0.002847          0.000000  \n",
-       "2008-01-04   0.014632       0.004150    0.001413  0.001678          0.000000  \n",
-       "2008-01-07  -0.003820       0.001705    0.003480  0.002363          0.000000  \n",
-       "2008-01-08  -0.031475       0.005055    0.001406 -0.001676          0.000000  \n",
-       "...               ...            ...         ...       ...               ...  \n",
-       "2023-05-24  -0.008191      -0.000405   -0.001660  0.000432          0.000302  \n",
-       "2023-05-25   0.007407       0.009797    0.001363 -0.000456         -0.000758  \n",
-       "2023-05-26   0.002458       0.001596   -0.001314 -0.000872          0.001208  \n",
-       "2023-05-30  -0.015411       0.001291   -0.002394  0.003186          0.000390  \n",
-       "2023-05-31  -0.012626       0.002401    0.001599  0.000712         -0.001304  \n",
-       "\n",
-       "[3876 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "returns['Daily']\n"
    ]
@@ -319,26 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "abed9771eba340ecb2a08e3c2c9cda3e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='frequency', options=('Daily', 'Weekly', 'Monthly', 'Quarterly', 'Y…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "freq_list = ['Daily', 'Weekly', 'Monthly','Quarterly', 'Yearly']\n",
     "@interact\n",
@@ -387,94 +141,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "notional value (Billions) for SPTR: 11\n",
-      "notional value (Billions) for Down Var: 1\n",
-      "notional value (Billions) for VOLA 3: 1\n",
-      "notional value (Billions) for Dynamic Put Spread: 1\n",
-      "notional value (Billions) for VRR 2: 1\n",
-      "notional value (Billions) for VRR Trend: 1\n",
-      "notional value (Billions) for GW Dispersion: 1\n",
-      "notional value (Billions) for Corr Hedge: 1\n",
-      "notional value (Billions) for Def Var: 1\n",
-      "notional value (Billions) for Commodity Basket: 1\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "</style>\n",
-       "<table id=\"T_a4a5f\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_a4a5f_level0_col0\" class=\"col_heading level0 col0\" >SPTR</th>\n",
-       "      <th id=\"T_a4a5f_level0_col1\" class=\"col_heading level0 col1\" >Down Var</th>\n",
-       "      <th id=\"T_a4a5f_level0_col2\" class=\"col_heading level0 col2\" >VOLA 3</th>\n",
-       "      <th id=\"T_a4a5f_level0_col3\" class=\"col_heading level0 col3\" >Dynamic Put Spread</th>\n",
-       "      <th id=\"T_a4a5f_level0_col4\" class=\"col_heading level0 col4\" >VRR Portfolio</th>\n",
-       "      <th id=\"T_a4a5f_level0_col5\" class=\"col_heading level0 col5\" >GW Dispersion</th>\n",
-       "      <th id=\"T_a4a5f_level0_col6\" class=\"col_heading level0 col6\" >Corr Hedge</th>\n",
-       "      <th id=\"T_a4a5f_level0_col7\" class=\"col_heading level0 col7\" >Def Var</th>\n",
-       "      <th id=\"T_a4a5f_level0_col8\" class=\"col_heading level0 col8\" >Commodity Basket</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th id=\"T_a4a5f_level0_row0\" class=\"row_heading level0 row0\" >Notional Weights (Billions)</th>\n",
-       "      <td id=\"T_a4a5f_row0_col0\" class=\"data row0 col0\" >$11.00</td>\n",
-       "      <td id=\"T_a4a5f_row0_col1\" class=\"data row0 col1\" >$1.00</td>\n",
-       "      <td id=\"T_a4a5f_row0_col2\" class=\"data row0 col2\" >$1.00</td>\n",
-       "      <td id=\"T_a4a5f_row0_col3\" class=\"data row0 col3\" >$1.00</td>\n",
-       "      <td id=\"T_a4a5f_row0_col4\" class=\"data row0 col4\" >$2.00</td>\n",
-       "      <td id=\"T_a4a5f_row0_col5\" class=\"data row0 col5\" >$1.00</td>\n",
-       "      <td id=\"T_a4a5f_row0_col6\" class=\"data row0 col6\" >$1.00</td>\n",
-       "      <td id=\"T_a4a5f_row0_col7\" class=\"data row0 col7\" >$1.00</td>\n",
-       "      <td id=\"T_a4a5f_row0_col8\" class=\"data row0 col8\" >$1.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_a4a5f_level0_row1\" class=\"row_heading level0 row1\" >Percentage Weights</th>\n",
-       "      <td id=\"T_a4a5f_row1_col0\" class=\"data row1 col0\" >100.00%</td>\n",
-       "      <td id=\"T_a4a5f_row1_col1\" class=\"data row1 col1\" >9.09%</td>\n",
-       "      <td id=\"T_a4a5f_row1_col2\" class=\"data row1 col2\" >9.09%</td>\n",
-       "      <td id=\"T_a4a5f_row1_col3\" class=\"data row1 col3\" >9.09%</td>\n",
-       "      <td id=\"T_a4a5f_row1_col4\" class=\"data row1 col4\" >18.18%</td>\n",
-       "      <td id=\"T_a4a5f_row1_col5\" class=\"data row1 col5\" >9.09%</td>\n",
-       "      <td id=\"T_a4a5f_row1_col6\" class=\"data row1 col6\" >9.09%</td>\n",
-       "      <td id=\"T_a4a5f_row1_col7\" class=\"data row1 col7\" >9.09%</td>\n",
-       "      <td id=\"T_a4a5f_row1_col8\" class=\"data row1 col8\" >9.09%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_a4a5f_level0_row2\" class=\"row_heading level0 row2\" >Strategy Weights</th>\n",
-       "      <td id=\"T_a4a5f_row2_col0\" class=\"data row2 col0\" >0.00%</td>\n",
-       "      <td id=\"T_a4a5f_row2_col1\" class=\"data row2 col1\" >11.11%</td>\n",
-       "      <td id=\"T_a4a5f_row2_col2\" class=\"data row2 col2\" >11.11%</td>\n",
-       "      <td id=\"T_a4a5f_row2_col3\" class=\"data row2 col3\" >11.11%</td>\n",
-       "      <td id=\"T_a4a5f_row2_col4\" class=\"data row2 col4\" >22.22%</td>\n",
-       "      <td id=\"T_a4a5f_row2_col5\" class=\"data row2 col5\" >11.11%</td>\n",
-       "      <td id=\"T_a4a5f_row2_col6\" class=\"data row2 col6\" >11.11%</td>\n",
-       "      <td id=\"T_a4a5f_row2_col7\" class=\"data row2 col7\" >11.11%</td>\n",
-       "      <td id=\"T_a4a5f_row2_col8\" class=\"data row2 col8\" >11.11%</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x254a2fd3f40>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#get notional weights\n",
     "notional_weights = dm.get_notional_weights(returns['Monthly'])\n",
@@ -496,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,6 +469,42 @@
     "selloffs = True\n",
     "grouped = False\n",
     "rp.get_equity_hedge_report(equity_hedge_report, returns, notional_weights, include_fi, new_strat, weighted[0], selloffs, grouped)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "10db837519104ec6830fac5e4f82f84e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='frequency', options=('Daily', 'Weekly', 'Monthly', 'Quarterly', 'Y…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "equity_bmk_list = ['SPTR','SX5T','M1WD','VIX','UX3']\n",
+    "strategy_list = ['Down Var',\n",
+    " 'Vortex', 'VOLA I', 'VOLA II','Dynamic VOLA','Dynamic Put Spread',\n",
+    "                    'GW Dispersion', 'Corr Hedge','Def Var (Mon)', 'Def Var (Fri)', 'Def Var (Wed)', \n",
+    "                    'Commodity Basket']\n",
+    "freq_list = ['Daily', 'Weekly', 'Monthly','Quarterly', 'Yearly']\n",
+    "@interact\n",
+    "def view_regression_plot(frequency = freq_list, strategy = strategy_list, equity_bmk = equity_bmk_list):\n",
+    "    strat_drop_list = ['Vortex','99%/90% Put Spread']\n",
+    "    returns = dm.get_equity_hedge_returns(equity_bmk, False, strat_drop_list, False, all_data = True)\n",
+    "    return plt2.get_regression_plot(frequency, strategy, equity_bmk)"
    ]
   },
   {
