--- a/Equity-Hedge-Notebook-Interns.ipynb
+++ b/Equity-Hedge-Notebook-Interns.ipynb
@@ -475,13 +475,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10db837519104ec6830fac5e4f82f84e",
+       "model_id": "bd01e88ea2014adb880a483ded9536f2",
        "version_major": 2,
        "version_minor": 0
       },
