--- a/Equity-Hedge-Notebook-Interns.ipynb
+++ b/Equity-Hedge-Notebook-Interns.ipynb
@@ -472,16 +472,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# View Regression Plot\n",
+    "\n",
+    "Run this code below to view a regression plot of various strategies with different benchmarks.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd01e88ea2014adb880a483ded9536f2",
+       "model_id": "7a39b24d75a04223add604db1473ca3b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -504,7 +513,7 @@
     "def view_regression_plot(frequency = freq_list, strategy = strategy_list, equity_bmk = equity_bmk_list):\n",
     "    strat_drop_list = ['Vortex','99%/90% Put Spread']\n",
     "    returns = dm.get_equity_hedge_returns(equity_bmk, False, strat_drop_list, False, all_data = True)\n",
-    "    return plt2.get_regression_plot(frequency, strategy, equity_bmk)"
+    "    return plt2.get_regression_plot(frequency, returns, strategy, equity_bmk)"
    ]
   },
   {
