updated notional weight list to include VRR Trend and Commodity Basket

--- a/powis_notebook.ipynb
+++ b/powis_notebook.ipynb
@@ -66,6 +66,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30003a4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weekly_ret.columns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "638c2d47",
    "metadata": {},
@@ -81,7 +91,7 @@
    "outputs": [],
    "source": [
     "#notional_weights = dm.get_notional_weights(returns['Weekly'])\n",
-    "notional_weights = [19.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.25, 1.0]\n",
+    "notional_weights = [19.0, 1.0, 1.25, 1.0, 0.75, 0.25, 1.0, 0.25, 1.0, 1.0]\n",
     "df_weights = util.get_df_weights(notional_weights, list(returns['Weekly'].columns))\n",
     "fmt.get_notional_styler(df_weights)"
    ]
@@ -488,7 +498,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -502,7 +512,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
