--- a/Cluster Analysis/scripts/Cluster Analysis-Copy1.ipynb
+++ b/Cluster Analysis/scripts/Cluster Analysis-Copy1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "da61de4f",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "c590ab21",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "5a68c48b",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>BXIIUWFH Index</th>\n",
+       "      <th>Barclays Weekly Short Var Hourly Index  BXIIUWFH Index</th>\n",
        "      <td>0.845629</td>\n",
        "      <td>0.442828</td>\n",
        "      <td>0.001556</td>\n",
@@ -106,7 +106,7 @@
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BXIIRWVH Index</th>\n",
+       "      <th>Barclays US Small Cap Weekly Var Hourly Index  BXIIRWVH Index</th>\n",
        "      <td>0.790128</td>\n",
        "      <td>0.409023</td>\n",
        "      <td>0.001557</td>\n",
@@ -114,7 +114,7 @@
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BXIIESFH Index</th>\n",
+       "      <th>Barclays Eurozone Weekly Short Var Hourly Index  BXIIESFH Index</th>\n",
        "      <td>0.708328</td>\n",
        "      <td>0.531921</td>\n",
        "      <td>0.001306</td>\n",
@@ -122,7 +122,7 @@
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BXIIUVR2 Index</th>\n",
+       "      <th>Barclays US Long Short Variance Relative Value Strategy  BXIIUVR2 Index</th>\n",
        "      <td>0.527790</td>\n",
        "      <td>0.526339</td>\n",
        "      <td>1.000000</td>\n",
@@ -130,7 +130,7 @@
        "      <td>0.101370</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BEFSDHVD Index</th>\n",
+       "      <th>Barclays VIX Options Risk Premium Series II Strategy Excess Return  BEFSDHVD Index</th>\n",
        "      <td>0.661711</td>\n",
        "      <td>0.497651</td>\n",
        "      <td>0.018968</td>\n",
@@ -138,7 +138,7 @@
        "      <td>0.687671</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BXIIWFHU Index</th>\n",
+       "      <th>Barclays Global Multi-Factor MH EW Index  BXIIWFHU Index</th>\n",
        "      <td>0.589812</td>\n",
        "      <td>0.501253</td>\n",
        "      <td>0.001812</td>\n",
@@ -146,7 +146,7 @@
        "      <td>0.531507</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BXIIWHIC Index</th>\n",
+       "      <th>Barclays Global Multi-Factor MH EW Index HiC  BXIIWHIC Index</th>\n",
        "      <td>0.587520</td>\n",
        "      <td>0.495994</td>\n",
        "      <td>0.001346</td>\n",
@@ -154,7 +154,7 @@
        "      <td>0.271233</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BXIIWFH2 Index</th>\n",
+       "      <th>Global Multi-Factor MH 2x Leveraged  BXIIWFH2 Index</th>\n",
        "      <td>0.590719</td>\n",
        "      <td>0.502852</td>\n",
        "      <td>0.003914</td>\n",
@@ -162,7 +162,7 @@
        "      <td>0.410959</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BXIIWFH3 Index</th>\n",
+       "      <th>Barclays Global Multi-Factor MH 3x Leveraged  BXIIWFH3 Index</th>\n",
        "      <td>0.591646</td>\n",
        "      <td>0.504603</td>\n",
        "      <td>0.006097</td>\n",
@@ -170,7 +170,7 @@
        "      <td>0.410959</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BXIIUFHU Index</th>\n",
+       "      <th>Barclays US Multi-Factor MH EW Index  BXIIUFHU Index</th>\n",
        "      <td>0.547069</td>\n",
        "      <td>0.479792</td>\n",
        "      <td>0.004272</td>\n",
@@ -178,7 +178,7 @@
        "      <td>0.063014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BXIIEFHE Index</th>\n",
+       "      <th>Barclays Eurozone Multi-Factor MH EW Index  BXIIEFHE Index</th>\n",
        "      <td>0.574183</td>\n",
        "      <td>0.474982</td>\n",
        "      <td>0.002810</td>\n",
@@ -186,7 +186,7 @@
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BXIIGFHG Index</th>\n",
+       "      <th>Barclays UK  Multi-Factor MH EW Index  BXIIGFHG Index</th>\n",
        "      <td>0.598038</td>\n",
        "      <td>0.548445</td>\n",
        "      <td>0.006687</td>\n",
@@ -194,7 +194,7 @@
        "      <td>0.287671</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BXIIJFHJ Index</th>\n",
+       "      <th>Barclays Japan Multi-Factor MH EW Index  BXIIJFHJ Index</th>\n",
        "      <td>0.476359</td>\n",
        "      <td>0.466685</td>\n",
        "      <td>0.002909</td>\n",
@@ -202,7 +202,7 @@
        "      <td>0.057534</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BXIIWMHU Index</th>\n",
+       "      <th>Barclays Global Momentum Market Hedged Index  BXIIWMHU Index</th>\n",
        "      <td>0.518140</td>\n",
        "      <td>0.484193</td>\n",
        "      <td>0.003787</td>\n",
@@ -210,7 +210,7 @@
        "      <td>0.293151</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BXIIMMUE Index</th>\n",
+       "      <th>Barclays US Momentum Equity Market Hedged Index ER  BXIIMMUE Index</th>\n",
        "      <td>0.517216</td>\n",
        "      <td>0.457174</td>\n",
        "      <td>0.004931</td>\n",
@@ -218,7 +218,7 @@
        "      <td>0.079452</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BXIIMMEE Index</th>\n",
+       "      <th>Barclays Eurozone Momentum Equity Market Hedged Index ER  BXIIMMEE Index</th>\n",
        "      <td>0.480531</td>\n",
        "      <td>0.463914</td>\n",
        "      <td>0.006355</td>\n",
@@ -226,7 +226,7 @@
        "      <td>0.068493</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BXIIMMGE Index</th>\n",
+       "      <th>Barclays UK Momentum Equity Market Hedged Index ER  BXIIMMGE Index</th>\n",
        "      <td>0.595796</td>\n",
        "      <td>0.522768</td>\n",
        "      <td>0.003778</td>\n",
@@ -234,7 +234,7 @@
        "      <td>0.279452</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BXIIMMJE Index</th>\n",
+       "      <th>Barclays Japan Momentum Equity Market Hedged Index ER  BXIIMMJE Index</th>\n",
        "      <td>0.482898</td>\n",
        "      <td>0.501161</td>\n",
        "      <td>0.007103</td>\n",
@@ -242,7 +242,7 @@
        "      <td>0.035616</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BXIIWVHU Index</th>\n",
+       "      <th>Barclays Global Value Market Hedged Index  BXIIWVHU Index</th>\n",
        "      <td>0.506436</td>\n",
        "      <td>0.449610</td>\n",
        "      <td>0.004820</td>\n",
@@ -250,7 +250,7 @@
        "      <td>0.230137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BXIIVMUE Index</th>\n",
+       "      <th>Barclays US Value Equity Market Hedged Index ER  BXIIVMUE Index</th>\n",
        "      <td>0.422807</td>\n",
        "      <td>0.406075</td>\n",
        "      <td>0.006827</td>\n",
@@ -262,52 +262,96 @@
        "</div>"
       ],
       "text/plain": [
-       "                Downside Reliability  Upside Reliability  Convexity      Cost  \\\n",
-       "BXIIUWFH Index              0.845629            0.442828   0.001556  0.952677   \n",
-       "BXIIRWVH Index              0.790128            0.409023   0.001557  0.940718   \n",
-       "BXIIESFH Index              0.708328            0.531921   0.001306  0.957960   \n",
-       "BXIIUVR2 Index              0.527790            0.526339   1.000000  0.000000   \n",
-       "BEFSDHVD Index              0.661711            0.497651   0.018968  0.885105   \n",
-       "BXIIWFHU Index              0.589812            0.501253   0.001812  0.958770   \n",
-       "BXIIWHIC Index              0.587520            0.495994   0.001346  0.958411   \n",
-       "BXIIWFH2 Index              0.590719            0.502852   0.003914  0.915600   \n",
-       "BXIIWFH3 Index              0.591646            0.504603   0.006097  0.872037   \n",
-       "BXIIUFHU Index              0.547069            0.479792   0.004272  0.924251   \n",
-       "BXIIEFHE Index              0.574183            0.474982   0.002810  0.932936   \n",
-       "BXIIGFHG Index              0.598038            0.548445   0.006687  0.907919   \n",
-       "BXIIJFHJ Index              0.476359            0.466685   0.002909  0.947768   \n",
-       "BXIIWMHU Index              0.518140            0.484193   0.003787  0.904587   \n",
-       "BXIIMMUE Index              0.517216            0.457174   0.004931  0.811920   \n",
-       "BXIIMMEE Index              0.480531            0.463914   0.006355  0.868008   \n",
-       "BXIIMMGE Index              0.595796            0.522768   0.003778  0.892204   \n",
-       "BXIIMMJE Index              0.482898            0.501161   0.007103  0.855746   \n",
-       "BXIIWVHU Index              0.506436            0.449610   0.004820  0.914815   \n",
-       "BXIIVMUE Index              0.422807            0.406075   0.006827  0.818139   \n",
+       "                                                    Downside Reliability  \\\n",
+       "Barclays Weekly Short Var Hourly Index  BXIIUWF...              0.845629   \n",
+       "Barclays US Small Cap Weekly Var Hourly Index  ...              0.790128   \n",
+       "Barclays Eurozone Weekly Short Var Hourly Index...              0.708328   \n",
+       "Barclays US Long Short Variance Relative Value ...              0.527790   \n",
+       "Barclays VIX Options Risk Premium Series II Str...              0.661711   \n",
+       "Barclays Global Multi-Factor MH EW Index  BXIIW...              0.589812   \n",
+       "Barclays Global Multi-Factor MH EW Index HiC  B...              0.587520   \n",
+       "Global Multi-Factor MH 2x Leveraged  BXIIWFH2 I...              0.590719   \n",
+       "Barclays Global Multi-Factor MH 3x Leveraged  B...              0.591646   \n",
+       "Barclays US Multi-Factor MH EW Index  BXIIUFHU ...              0.547069   \n",
+       "Barclays Eurozone Multi-Factor MH EW Index  BXI...              0.574183   \n",
+       "Barclays UK  Multi-Factor MH EW Index  BXIIGFHG...              0.598038   \n",
+       "Barclays Japan Multi-Factor MH EW Index  BXIIJF...              0.476359   \n",
+       "Barclays Global Momentum Market Hedged Index  B...              0.518140   \n",
+       "Barclays US Momentum Equity Market Hedged Index...              0.517216   \n",
+       "Barclays Eurozone Momentum Equity Market Hedged...              0.480531   \n",
+       "Barclays UK Momentum Equity Market Hedged Index...              0.595796   \n",
+       "Barclays Japan Momentum Equity Market Hedged In...              0.482898   \n",
+       "Barclays Global Value Market Hedged Index  BXII...              0.506436   \n",
+       "Barclays US Value Equity Market Hedged Index ER...              0.422807   \n",
        "\n",
-       "                   Decay  \n",
-       "BXIIUWFH Index  1.000000  \n",
-       "BXIIRWVH Index  1.000000  \n",
-       "BXIIESFH Index  1.000000  \n",
-       "BXIIUVR2 Index  0.101370  \n",
-       "BEFSDHVD Index  0.687671  \n",
-       "BXIIWFHU Index  0.531507  \n",
-       "BXIIWHIC Index  0.271233  \n",
-       "BXIIWFH2 Index  0.410959  \n",
-       "BXIIWFH3 Index  0.410959  \n",
-       "BXIIUFHU Index  0.063014  \n",
-       "BXIIEFHE Index  0.000000  \n",
-       "BXIIGFHG Index  0.287671  \n",
-       "BXIIJFHJ Index  0.057534  \n",
-       "BXIIWMHU Index  0.293151  \n",
-       "BXIIMMUE Index  0.079452  \n",
-       "BXIIMMEE Index  0.068493  \n",
-       "BXIIMMGE Index  0.279452  \n",
-       "BXIIMMJE Index  0.035616  \n",
-       "BXIIWVHU Index  0.230137  \n",
-       "BXIIVMUE Index  0.065753  "
+       "                                                    Upside Reliability  \\\n",
+       "Barclays Weekly Short Var Hourly Index  BXIIUWF...            0.442828   \n",
+       "Barclays US Small Cap Weekly Var Hourly Index  ...            0.409023   \n",
+       "Barclays Eurozone Weekly Short Var Hourly Index...            0.531921   \n",
+       "Barclays US Long Short Variance Relative Value ...            0.526339   \n",
+       "Barclays VIX Options Risk Premium Series II Str...            0.497651   \n",
+       "Barclays Global Multi-Factor MH EW Index  BXIIW...            0.501253   \n",
+       "Barclays Global Multi-Factor MH EW Index HiC  B...            0.495994   \n",
+       "Global Multi-Factor MH 2x Leveraged  BXIIWFH2 I...            0.502852   \n",
+       "Barclays Global Multi-Factor MH 3x Leveraged  B...            0.504603   \n",
+       "Barclays US Multi-Factor MH EW Index  BXIIUFHU ...            0.479792   \n",
+       "Barclays Eurozone Multi-Factor MH EW Index  BXI...            0.474982   \n",
+       "Barclays UK  Multi-Factor MH EW Index  BXIIGFHG...            0.548445   \n",
+       "Barclays Japan Multi-Factor MH EW Index  BXIIJF...            0.466685   \n",
+       "Barclays Global Momentum Market Hedged Index  B...            0.484193   \n",
+       "Barclays US Momentum Equity Market Hedged Index...            0.457174   \n",
+       "Barclays Eurozone Momentum Equity Market Hedged...            0.463914   \n",
+       "Barclays UK Momentum Equity Market Hedged Index...            0.522768   \n",
+       "Barclays Japan Momentum Equity Market Hedged In...            0.501161   \n",
+       "Barclays Global Value Market Hedged Index  BXII...            0.449610   \n",
+       "Barclays US Value Equity Market Hedged Index ER...            0.406075   \n",
+       "\n",
+       "                                                    Convexity      Cost  \\\n",
+       "Barclays Weekly Short Var Hourly Index  BXIIUWF...   0.001556  0.952677   \n",
+       "Barclays US Small Cap Weekly Var Hourly Index  ...   0.001557  0.940718   \n",
+       "Barclays Eurozone Weekly Short Var Hourly Index...   0.001306  0.957960   \n",
+       "Barclays US Long Short Variance Relative Value ...   1.000000  0.000000   \n",
+       "Barclays VIX Options Risk Premium Series II Str...   0.018968  0.885105   \n",
+       "Barclays Global Multi-Factor MH EW Index  BXIIW...   0.001812  0.958770   \n",
+       "Barclays Global Multi-Factor MH EW Index HiC  B...   0.001346  0.958411   \n",
+       "Global Multi-Factor MH 2x Leveraged  BXIIWFH2 I...   0.003914  0.915600   \n",
+       "Barclays Global Multi-Factor MH 3x Leveraged  B...   0.006097  0.872037   \n",
+       "Barclays US Multi-Factor MH EW Index  BXIIUFHU ...   0.004272  0.924251   \n",
+       "Barclays Eurozone Multi-Factor MH EW Index  BXI...   0.002810  0.932936   \n",
+       "Barclays UK  Multi-Factor MH EW Index  BXIIGFHG...   0.006687  0.907919   \n",
+       "Barclays Japan Multi-Factor MH EW Index  BXIIJF...   0.002909  0.947768   \n",
+       "Barclays Global Momentum Market Hedged Index  B...   0.003787  0.904587   \n",
+       "Barclays US Momentum Equity Market Hedged Index...   0.004931  0.811920   \n",
+       "Barclays Eurozone Momentum Equity Market Hedged...   0.006355  0.868008   \n",
+       "Barclays UK Momentum Equity Market Hedged Index...   0.003778  0.892204   \n",
+       "Barclays Japan Momentum Equity Market Hedged In...   0.007103  0.855746   \n",
+       "Barclays Global Value Market Hedged Index  BXII...   0.004820  0.914815   \n",
+       "Barclays US Value Equity Market Hedged Index ER...   0.006827  0.818139   \n",
+       "\n",
+       "                                                       Decay  \n",
+       "Barclays Weekly Short Var Hourly Index  BXIIUWF...  1.000000  \n",
+       "Barclays US Small Cap Weekly Var Hourly Index  ...  1.000000  \n",
+       "Barclays Eurozone Weekly Short Var Hourly Index...  1.000000  \n",
+       "Barclays US Long Short Variance Relative Value ...  0.101370  \n",
+       "Barclays VIX Options Risk Premium Series II Str...  0.687671  \n",
+       "Barclays Global Multi-Factor MH EW Index  BXIIW...  0.531507  \n",
+       "Barclays Global Multi-Factor MH EW Index HiC  B...  0.271233  \n",
+       "Global Multi-Factor MH 2x Leveraged  BXIIWFH2 I...  0.410959  \n",
+       "Barclays Global Multi-Factor MH 3x Leveraged  B...  0.410959  \n",
+       "Barclays US Multi-Factor MH EW Index  BXIIUFHU ...  0.063014  \n",
+       "Barclays Eurozone Multi-Factor MH EW Index  BXI...  0.000000  \n",
+       "Barclays UK  Multi-Factor MH EW Index  BXIIGFHG...  0.287671  \n",
+       "Barclays Japan Multi-Factor MH EW Index  BXIIJF...  0.057534  \n",
+       "Barclays Global Momentum Market Hedged Index  B...  0.293151  \n",
+       "Barclays US Momentum Equity Market Hedged Index...  0.079452  \n",
+       "Barclays Eurozone Momentum Equity Market Hedged...  0.068493  \n",
+       "Barclays UK Momentum Equity Market Hedged Index...  0.279452  \n",
+       "Barclays Japan Momentum Equity Market Hedged In...  0.035616  \n",
+       "Barclays Global Value Market Hedged Index  BXII...  0.230137  \n",
+       "Barclays US Value Equity Market Hedged Index ER...  0.065753  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "1fe07faf",
    "metadata": {},
    "outputs": [
@@ -331,7 +375,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HQP6CBS\\AppData\\Local\\Temp\\ipykernel_16856\\4055174385.py:13: ClusterWarning:\n",
+      "C:\\Users\\HQP6CBS\\AppData\\Local\\Temp\\ipykernel_22128\\4055174385.py:13: ClusterWarning:\n",
       "\n",
       "scipy.cluster: The symmetric non-negative hollow observation matrix looks suspiciously like an uncondensed distance matrix\n",
       "\n"
@@ -373,7 +417,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3d41329d9f642c9a3144b9b10ab6736",
+       "model_id": "057a727d9df14ca69e620bcd53f94d84",
        "version_major": 2,
        "version_minor": 0
       },
